--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-app.version.server = 1.0
+app.version.server = 1
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Test
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
