--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -21,12 +21,12 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <dependency>
@@ -40,7 +40,6 @@
             <version>42.2.18</version>
         </dependency>
 
-
     </dependencies>
 
     <build>
@@ -51,5 +50,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
