--- a/demo/src/main/resources/default.properties
+++ b/demo/src/main/resources/default.properties
@@ -1,5 +1,5 @@
 app.version.server=1
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost:5432/{nameDB}
 spring.datasource.username={name}
 spring.datasource.password={password}
