--- a/Module exchange rate/pom.xml
+++ b/Module exchange rate/pom.xml
@@ -19,6 +19,14 @@
     </properties>
 
     <dependencies>
+
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework/spring-web &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework</groupId>-->
+        <!--            <artifactId>spring-web</artifactId>-->
+        <!--            <version>4.3.8.RELEASE</version>-->
+        <!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
