--- a/demo/src/main/resources/default.properties
+++ b/demo/src/main/resources/default.properties
@@ -7,3 +7,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 server.error.include-message=always
+logstash.host=@logstash.host@
+logstash.port=@logstash.port@
+logger.console.tresholdFilter=@logger.console.tresholdFilter@
+logger.socket.tresholdFilter=@logger.socket.tresholdFilter@
